<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BlueCade</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to BlueCade</string>
    <string name="welcomeinfo">A brand new bluetooth game platform</string>
    <string name="opengame">Launch game</string>
    <string name="gameimage">Game image</string>
    <string name="backarrow">Back</string>
    <string name="forarrow">Forward</string>
    <string name="swipe">Swipe to switch game</string>
    <string name="rps">Rock, Paper, Scissors</string>
    <string name="pic">Pictionary</string>
    <string name="startbutton">Start game</string>
    <string name="connectbutton">Connect</string>
    <string name="instructions">Instructions</string>
    <string name="highscores">Highscores</string>
    <string name="connected">Connected to :</string>
    <string name="btonoff">Bluetooth connection</string>
    <string name="refreshpairing">Search devices</string>
    <string name="devices">Available decives</string>
    <string name="info">Info</string>
    <string name="button_scan">Scan for devices</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="scanning">scanning for devices...</string>
    <string name="none_found">No devices found</string>
    <string name="select_device">select a device to connect</string>
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_connecting">connecting...</string>
    <string name="title_not_connected">not connected</string>
    <string name="btn_find">Find Device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Remote Bluetooth</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Available Devices</string>

</resources>
